syntax = "proto3";
package core.eventbus.v1;

option go_package = "github.com/koblas/grpc-todo/protos";

import "core/v1/user.proto";
import "core/v1/todo.proto";
import "core/v1/file.proto";
import "core/v1/websocket.proto";
import "core/message/v1/message.proto";

message EventbusEmpty {}

message BroadcastEventbusSendResponse {}

// Websocket broadcast event
service BroadcastEventbusService {
  rpc Send(core.v1.BroadcastEvent) returns (BroadcastEventbusSendResponse);
}

message UserEventbusUserChangeResponse {}
message UserEventbusSecurityPasswordChangeResponse {}
message UserEventbusSecurityForgotRequestResponse {}
message UserEventbusSecurityRegisterTokenResponse {}
message UserEventbusSecurityInviteTokenResponse {}

service UserEventbusService {
  rpc UserChange(core.v1.UserChangeEvent) returns (UserEventbusUserChangeResponse);

  // Password change notification
  rpc SecurityPasswordChange(core.v1.UserSecurityEvent)
      returns (UserEventbusSecurityPasswordChangeResponse);
  // Forgot password request notfication
  rpc SecurityForgotRequest(core.v1.UserSecurityEvent)
      returns (UserEventbusSecurityForgotRequestResponse);
  // New user registration
  rpc SecurityRegisterToken(core.v1.UserSecurityEvent)
      returns (UserEventbusSecurityRegisterTokenResponse);
  // Invite sent
  rpc SecurityInviteToken(core.v1.UserSecurityEvent)
      returns (UserEventbusSecurityInviteTokenResponse);
}

message TodoEventbusTodoChangeResponse {}

service TodoEventbusService {
  rpc TodoChange(core.v1.TodoChangeEvent) returns (TodoEventbusTodoChangeResponse);
}

message FileEventbusFileUploadedResponse {}
message FileEventbusFileCompleteResponse {}

service FileEventbusService {
  rpc FileUploaded(core.v1.FileServiceUploadEvent) returns (FileEventbusFileUploadedResponse);
  rpc FileComplete(core.v1.FileServiceCompleteEvent) returns (FileEventbusFileCompleteResponse);
}

message MessageEventbusServiceChangeResponse {}

service MessageEventbusService {
  rpc Change(core.message.v1.MessageChangeEvent) returns (MessageEventbusServiceChangeResponse);
}